@@ -409,6 +409,38 @@ class TestShutdown(StacklessTestCase):
         t.join()
         print("Done")
 
+    @unittest.skipUnless(withThreads, "requires thread support")
+    def test_deep_thread(self):
+        # test for issue #103 https://bitbucket.org/stackless-dev/stackless/issues/103/
+        import subprocess
+        rc = subprocess.call([sys.executable, "-S", "-E", "-c", """from __future__ import print_function, absolute_import\nif 1:
+            import threading
+            import stackless
+            import time
+            import sys
+            from stackless import _test_nostacklesscall as apply
+
+            RECURSION_DEPTH = 200
+
+            event = threading.Event()
+
+            def recurse():
+                if stackless.current.nesting_level < RECURSION_DEPTH:
+                    apply(recurse)
+                else:
+                    event.set()
+                    time.sleep(10)
+
+            t = threading.Thread(target=recurse, name="other_thread")
+            t.daemon = True
+            t.start()
+            event.wait(10)
+            # print("end")
+            sys.stdout.flush()
+            sys.exit(42)
+            """])
+        self.assertEqual(rc, 42)
+
 
 class TestStacklessProtokoll(StacklessTestCase):
     """Various tests for violations of the STACKLESS_GETARG() STACKLESS_ASSERT() protocol
